# backend/src/routes/companyRoutes.js
@@ -1,16 +1,18 @@
 const express = require("express");
 const router = express.Router();
 const Company = require("../models/Company");
-const User = require("../models/User");
-const Pipeline = require("../models/Pipeline");
-const Contact = require("../models/Contact");
+// const User = require("../models/User");
+// const Pipeline = require("../models/Pipeline");
+// const Contact = require("../models/Contact");
+
+const getCompanyByID = require("../middleware/getCompanyById");
 
 /**
  * @openapi
- * /api/company:
+ * /api/company/all:
  *   get:
  *     summary: Get all companies
- *     tags: [Companies]
+ *     tags: [Company]
  *     responses:
  *       200:
  *         description: A list of companies
@@ -20,21 +22,281 @@ const Contact = require("../models/Contact");
  *               type: array
  *               items:
  *                 $ref: '#/components/schemas/Company'
+ *       400:
+ *         description: Bad request
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               example: {message: "Bad request"}
  */
 
-router.get("/", async (req, res) => {
+router.get("/all", async (req, res) => {
   const companies = await Company.find();
   res.json(companies);
 });
 
-router.post("/", async (req, res) => {
-  const body = {
-    name: req.body.name,
-    email: req.body.email,
-    phone: req.body.phone,
-  };
-  const company = await Company.create(body);
-  res.json(company);
+/**
+ * @openapi
+ * /api/company/id/{id}:
+ *   get:
+ *     summary: Get company by ID
+ *     tags: [Company]
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         schema:
+ *           type: string
+ *         required: true
+ *     responses:
+ *       200:
+ *         description: Company with ID
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: array
+ *               items:
+ *                 $ref: '#/components/schemas/Company'
+ *       400:
+ *         description: Company ID is required
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               example: {message: "Company's ID is required"}
+ *       404:
+ *         description: Not Found
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               example: {message: "Company not found"}
+ */
+
+router.get("/id/:id", getCompanyByID, async (req, res) => {
+  if (req.params.id == null) {
+    res.status(400).json({ message: "Company ID is required" });
+  }
+  const company = await Company.find({ _id: req.params.id });
+  res.status(200).json(company);
+});
+
+/**
+ * @openapi
+ * /api/company/add:
+ *  post:
+ *     summary: Create new company
+ *     tags: [Company]
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             $ref: '#/components/schemas/Company'
+ *           example:
+ *             name: "ACME Inc."
+ *             address: "123 The Great Plains"
+ *             city: "Turbulence Heights"
+ *             postCode: "MN 3456"
+ *             email: "hello@acmeinc.com"
+ *             phone: "+48876654432"
+ *             vat: "PL9878767655"
+ *             status: "active"
+ *             companyType: "lead"
+ *             contactMethods: ["email","phone"]
+ *             brokerId: "userID"
+ *     responses:
+ *       201:
+ *         description: Company created
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: array
+ *               items:
+ *                 $ref: '#/components/schemas/Company'
+ *       400:
+ *         description: Bad request
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               example: {message: "Bad request"}
+ *       404:
+ *         description: Not Found
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               example: {message: "Company not found"}
+ */
+
+router.post("/add", async (req, res) => {
+  try {
+    const {
+      name,
+      address,
+      city,
+      postCode,
+      email,
+      phone,
+      vat,
+      status,
+      companyType,
+      contactMethods,
+      brokerId,
+    } = req.body;
+    const company = new Company({
+      name: name,
+      address: address,
+      city: city,
+      postCode: postCode,
+      email: email,
+      phone: phone,
+      vat: vat,
+      status: status,
+      companyType: companyType,
+      contactMethods: contactMethods,
+      brokerId: brokerId,
+    });
+    const newCompany = await company.save();
+    res.status(201).json(newCompany);
+  } catch (err) {
+    res.status(400).json({ message: err.message });
+  }
+});
+
+/** @openapi
+ * /api/company/{id}:
+ *   patch:
+ *     summary: Update company data
+ *     tags: [User]
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         schema:
+ *           type: string
+ *         required: true
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             $ref: '#/components/schemas/Company'
+ *           example:
+ *             name: "ACME Inc"
+ *             address: "13 Main Street"
+ *             city: "Warsaw"
+ *             postCode: "00-950"
+ *             email: "ashoka@gmail.com"
+ *             phone: "+48654543432"
+ *             vat: "PL8767656543"
+ *             status: "active"
+ *             companyType: "lead"
+ *             contactMethods: {tags: ["email", "phone"]}
+ *             brokerId: "userID"
+ *     responses:
+ *       201:
+ *         description: User created
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               $ref: '#/components/schemas/UserCreated'
+ *       400:
+ *         description: Bad request
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               example: {message: "Bad request"}
+ */
+
+router.patch("/:id", getCompanyByID, async (req, res) => {
+  if (req.body.name != null) {
+    res.company.name = req.body.name;
+  }
+  if (req.body.address != null) {
+    res.company.address = req.body.address;
+  }
+  if (req.body.city != null) {
+    res.company.city = req.body.city;
+  }
+  if (req.body.postCode != null) {
+    res.company.postCode = req.body.postCode;
+  }
+  if (req.body.email != null) {
+    res.company.email = req.body.email;
+  }
+  if (req.body.phone != null) {
+    res.company.phone = req.body.phone;
+  }
+  if (req.body.vat != null) {
+    res.company.vat = req.body.vat;
+  }
+  if (req.body.status != null) {
+    res.company.status = req.body.status;
+  }
+  if (req.body.companyType != null) {
+    res.company.companyType = req.body.companyType;
+  }
+  if (req.body.contactMethods != null) {
+    res.company.contactMethods = req.body.contactMethods;
+  }
+  if (req.body.brokerId != null) {
+    res.company.brokerId = req.body.brokerId;
+  }
+  try {
+    const updatedCompany = await res.company.save();
+    res.json(updatedCompany);
+  } catch (err) {
+    res.status(400).json({ message: err.message });
+  }
+});
+
+/**
+ * @openapi
+ * /api/company/{id}:
+ *  delete:
+ *     summary: Delete company by ID
+ *     tags: [Company]
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         schema:
+ *           type: string
+ *         required: true
+ *     responses:
+ *       200:
+ *         description: Company deleted
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: array
+ *               items:
+ *                 $ref: '#/components/schemas/Company'
+ *       400:
+ *         description: Bad request
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               example: {message: "Bad request"}
+ *       404:
+ *         description: Not Found
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               example: {message: "Company not found"}
+ */
+
+router.delete("/:id", getCompanyByID, async (req, res) => {
+  try {
+    await res.company.deleteOne();
+    res.json({ message: `Company ID: ${req.params.id} deleted` });
+  } catch (err) {
+    res.status(500).json({ message: err.message });
+  }
 });
 
 module.exports = router;
